0.24 (future)
* Replace Grid and Linearity with Monoscope (thanks Lorenzoone)
* Sound test: add surround option
* Reflect rebranding of Twitter to X

0.23 (2023-03-03)
* Help: fix blink sprite alignment
* Credits: Display version from Git commit tag and ID
* Credits: Pino has moved to the Fediverse
* Motion blur: add health warning
* Motion blur: increase duration cap to 60 frames
  (requested by zeta0134)
* Motion blur: do not edit parameters while running
* Shadow sprite: add Donna
* Rename Manual lag test to Timing and reflex test to reflect
  how it is used
* Hill zone scroll test: Switch from laggy libgba IRQs to HDMA
  to reduce split artifacts
* Backlight zones: add speed control
* Build in GitHub Actions (thanks Persune)

0.22 (2020-11-04)
* Color bars: A to toggle NTSC 7.5% setup
* Color bleed: Rearrange to 10 rectangles
* Add a back story for Gus
* Document deliberately replaced assets

0.21 (2020-06-01)
* Help: Make some descriptions more concise (with Artemio's help)
* Compile with -fno-common for GCC 10 compatibility

0.20 (2020-01-30)
* Add Convergence pattern
* Vertical scroll test: Display the correct help page
* Help: Blink Gus's eyes

0.19 (2019-09-12)
* Stopwatch: Bolder digits
* Color bleed: Fix frame # covering everything
* PLUGE Contrast, Vertical scroll: Center pattern horizontally
* Help: Standardize phrasing: "stuck pixels", "hide or show",
  "start or stop"
* Help: List patrons as of release time
* README: Explain rationale behind "160p" title
* Use a more common makefile
* Specify each PNG's conversion settings in a grit file

0.18 (2019-05-02)
* PLUGE: Add PLUGE Contrast sub-test with shark graphic
  (Genesis 1.16 parity)
* Want your name in the credits? patreon.com/pineight

0.17 (2018-06-30)
* Solid screen: Explain what a bad high voltage regulator does to
  GB Player border (requested by ISSOtm)
* Sharpness: A to show brick wall pattern (Genesis 1.16 parity)
* Stopwatch: Draw even frame numbers in blue and odd in red