@@ -49,12 +49,12 @@ void vwfDrawLabels(const char *labelset, unsigned int sbb, unsigned int tilenum)
     txtw = (((txtw - 1) | 0x07) + 1) >> 3;  // Round up to whole tile
 
     // Clear this many tiles to color 0 and draw into them using color 1
-    void *chrdst = PATRAM4(0, tilenum & 0x07FF);
-    dma_memset16(chrdst, 0x0000, 32 * txtw);
+    void *chrdst = &(tile_mem[0][tilenum & 0x07FF].data);
+    memset16(chrdst, 0x0000, 16 * txtw);
     const char *strend = vwf8Puts(chrdst, labelset + 2, x & 0x07, 1);
     
     // Fill the SCREENMAT
-    loadMapRowMajor(&(MAP[sbb][y >> 3][x >> 3]), tilenum & 0xF3FF, txtw, 1);
+    loadMapRowMajor(&(se_mat[sbb][y >> 3][x >> 3]), tilenum & 0xF3FF, txtw, 1);
     tilenum += txtw;
 
     if (*strend == 0) break;
