@@ -1,0 +1,5 @@
+[cartridge]
+logo = "official"
+title = "160P TEST"
+code = "H24A"
+maker = "P8"
